# StreetScan-AI

./: CONTRIBUTING.md  README.md  README_RU.md  pyproject.toml  requirements.txt
StreetScanAI/: .gitignore  CONTRIBUTING.md  LICENSE  README.md  README_RU.md  pyproject.toml  requirements.txt
StreetScanAI/configs/: analytics.yaml  benchmark.yaml  clustering.yaml  config.yaml  preprocessing.yaml  segmentation.yaml  tracking.yaml
StreetScanAI/docs/en/: analytics.md  architecture.md  benchmarking.md  cli.md  clustering.md  final_report.md  preprocessing.md  segmentation.md  visualization.md
StreetScanAI/docs/ru/: analytics.md  architecture.md  benchmarking.md  clustering.md  preprocessing.md  segmentation.md  visualization.md
StreetScanAI/scripts/: analyze_scene.py  generate_report.py  run_segmentation.py  visualize_scene.py
StreetScanAI/src/: cli.py
StreetScanAI/src/analytics/: __init__.py  density_analysis.py  occupancy_grid.py  pedestrian_flow.py  spatial_statistics.py  traffic_analysis.py  visibility_analysis.py
StreetScanAI/src/benchmark/: benchmark_metrics.py  benchmark_runner.py  compare_methods.py  plot_benchmarks.py  report_generator.py
StreetScanAI/src/clustering/: cluster_analysis.py  dbscan_clustering.py
StreetScanAI/src/io/: formats.py  save_pointcloud.py
StreetScanAI/src/preprocessing/: ground_filter.py  voxel_downsampling.py
StreetScanAI/src/segmentation/: labels.py  pointnet_placeholder.py  segmentation_io.py  semantic_coloring.py  semantic_segmentation.py
StreetScanAI/src/tracking/: __init__.py  kalman_tracker.py  track_visualization.py  trajectory_builder.py  velocity_estimation.py
StreetScanAI/src/utils/: geometry_utils.py  logger.py
StreetScanAI/src/visualization/: __init__.py  birdeye_renderer.py  cluster_renderer.py  plot_metrics.py  pointcloud_viewer.py  semantic_renderer.py  trajectory_renderer.py  trajectory_visualizer.py
StreetScanAI/tests/: test_analytics.py
assets/: PLACEHOLDERS.md
configs/: analytics.yaml  benchmark.yaml  clustering.yaml  config.yaml  preprocessing.yaml  segmentation.yaml  visualization.yaml
docs/en/: analytics.md  architecture.md  benchmarking.md  cli.md  clustering.md  final_report.md  (+4 more)
scripts/: benchmark_pipeline.py  cluster_scene.py  preprocess_cloud.py
src/: __init__.py
tests/: test_clustering.py  test_geometry.py  test_preprocessing.py
(+39 files in other folders)
