[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "streetscanai"
version = "0.1.0"
description = "LiDAR-based urban scene understanding and 3D spatial analytics framework"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "StreetScanAI Contributors"}]
dependencies = [
  "numpy>=1.24",
  "pandas>=2.0",
  "matplotlib>=3.7",
  "scipy>=1.10",
  "scikit-learn>=1.3",
  "PyYAML>=6.0",
  "open3d>=0.18",
  "pyvista>=0.43"
]

[project.scripts]
streetscan = "src.cli:main"

[tool.pytest.ini_options]
pythonpath = ["."]
addopts = "-q"
